# Maci-minimal-agent-control-infrastructure

./: .gitignore  CHANGELOG.md  Makefile  README.md  aws_deployment_guide_for_junior_engineers.md  pyproject.toml
docs/: agent-conversation-logging-and-audit-guide.md  api-waf-rate-limiting-and-pii-redaction.md  architecture.md  aws-deployment-guide-for-junior-engineers.md  aws-deployment.md  aws-first-deploy-lab.md  business-painpoint.md  cicd-and-recovery-operating-model.md  code-audit-v0.1.1.md  code-audit-v0.1.2.md  code-audit-v0.1.3.md  code-audit-v0.1.4.md  conversation-history.md  conversation-ownership-and-tool-recovery-wiring.md  documentation-audit.md  governed-ai-support-agent-workflow.md  index.md  industry-best-practices-2026.md  interview-talking-points.md  limitations.md  official-dataset-live-redteam-harness.md  production-readiness.md  prompt-injection-red-team-suite.md  recovery-daemon-operating-model.md  recovery-playbooks.md  runbook.md  security-hardening.md  terraform-deployment.md  threat-model.md  workflow-state-machine.md
infra/: template.yaml
policy/: prod_tfvars.rego
scripts/: create_cognito_demo_user.py  export_hf_redteam_dataset.py  export_public_redteam_dataset.py  get_cognito_token.py  run_redteam_against_endpoint.py  seed_demo_policies.py  smoke_test_api.py  verify_redteam_assets.py
tests/: test_agent_tools.py  test_audit_chain_and_circuit_visibility.py  test_bedrock_gateway.py  test_circuit_breaker.py  test_conversation_ownership_and_tool_recovery.py  test_conversation_recovery.py  test_cost.py  test_hardening_security.py  (+7 more)
(+107 files in other folders)
